# bta

./: .env.example  .gitignore  Makefile  README.md  TODO.md  pyproject.toml
doc/: decisions.md  requirements.md
output/: test.state.json  test.txt
sample/: intro.py  pause.py.sample
scripts/: flow.sh  merge_wavs.sh
skill/add-pause-tags/: SKILL.md
skill/add-pause-tags/agents/: openai.yaml
skill/add-pause-tags/scripts/: add_pause_tags.py
skill/ebook-export-cleanup/: SKILL.md
skill/ebook-export-cleanup/agents/: openai.yaml
skill/ebook-export-cleanup/scripts/: clean_ebook_export.py
skill/merge-chapters-into-md/: SKILL.md
skill/merge-chapters-into-md/agents/: openai.yaml
skill/merge-chapters-into-md/scripts/: merge_chapters.py
skill/split-ebook-into-chapters/: SKILL.md
skill/split-ebook-into-chapters/agents/: openai.yaml
skill/split-ebook-into-chapters/scripts/: split_by_markers.py
skill/weekly-briefing/: SKILL.md
skill/weekly-briefing/agents/: openai.yaml
src/bta/: __main__.py  cli.py  config.py  conversion.py  output.py  pause_tags.py  pocket_tts.py  text.py
tests/: test_cli.py  test_config.py  test_conversion.py  test_output.py  test_pause_tags.py  test_pocket_tts.py  test_scripts.py  test_text.py
