[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bta"
version = "1.2.1"
description = "Book to Audio converter"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC0-1.0" }
keywords = ["audiobook", "markdown", "tts", "wav"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "python-dotenv>=1,<2",
    "pocket-tts==2.1.0",
    "scipy>=1.5.0",
    "soundfile",
]

[project.optional-dependencies]
dev = [
    "mypy>=2,<3",
    "pytest>=8,<9",
    "ruff>=0.15,<1",
]

[project.scripts]
bta = "bta.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
mypy_path = "src"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
